--- a/multimidia.html
+++ b/multimidia.html
@@ -39,8 +39,8 @@
 	
 		Glass > Multimídia
 		Sons e Vídeos
-		por Gustavo Guanabara
-		Atualizado em 01/Maio/2013
+		por Rosberg GUedes
+		Atualizado em 01/Maio/2015
 
 		<div id="tv-radio">
 			<audio id="musica" controls>
